<?xml version="1.0" encoding="utf-8"?>
<!--
    PANTALLA DE INICIO (HOME)
    Esta pantalla es el punto de partida donde el usuario decide dar el primer paso en su viaje.
    El diseño utiliza un fondo negro para resaltar la identidad visual de Rutafix.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Home">

    <!--
        IMAGEN DE IDENTIDAD (imageView):
        Muestra el logo oficial de la aplicación en la parte superior.
        Mantiene la consistencia visual y refuerza la marca desde el inicio.
    -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="272dp"
        android:layout_height="221dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/logo" />

    <!--
        TÍTULO DE BIENVENIDA (NombreApp_pag2):
        Refuerza el nombre de la app con un tamaño de fuente imponente (55sp).
        Es el centro de atención que prepara al usuario para lo que viene.
    -->
    <TextView
        android:id="@+id/NombreApp_pag2"
        android:layout_width="371dp"
        android:layout_height="95dp"
        android:text="@string/rutafix"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <!--
        ESLOGAN DE AVENTURA (BienvenidaRutafix):
        Texto motivador que invita a descubrir una nueva forma de viajar.
        Usa un color gris para ser legible sin competir visualmente con el título principal.
    -->
    <TextView
        android:id="@+id/BienvenidaRutafix"
        android:layout_width="375dp"
        android:layout_height="114dp"
        android:text="@string/inicia_una_nueva_aventura_con_rutafix_y_descubre_una_nueva_forma_de_andar_en_la_carretera"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.496" />

    <!--
        BOTÓN DE ACCIÓN (BotonComienza):
        El componente estrella. Con bordes redondeados y texto grande,
        invita al usuario a iniciar su aventura con un solo clic.
    -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BotonComienza"
        android:layout_width="334dp"
        android:layout_height="80dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/comienza"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <!--
        ENLACE DE REGISTRO (textRegistrate):
        Opción alternativa en color verde para aquellos aventureros que
        aún no tienen una cuenta y necesitan registrarse.
    -->
    <TextView
        android:id="@+id/textRegistrate"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:textColor="@color/green"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />
</androidx.constraintlayout.widget.ConstraintLayout>